--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,11 @@ version: '3.8'
 
 services:
   backend:
-    build: ./car-mqtt
+    # 镜像名称需要与 GitHub Actions 中推送的名称一致
+    image: $DOCKER_USERNAME/car-mqtt:latest
+    build: 
+      context: /www/cicd_wuyu/newTest/FiveEducation
+      dockerfile: ./car-mqtt/Dockerfile  # 明确指定 Dockerfile 路径
     ports:
       - "8080:8080"
     environment:
@@ -10,7 +14,11 @@ services:
     restart: unless-stopped
 
   frontend:
-    build: ./vuetify-project
+    # 镜像名称需要与 GitHub Actions 中推送的名称一致
+    image: $DOCKER_USERNAME/vuetify-project:latest
+    build:
+      context: /www/cicd_wuyu/newTest/FiveEducation
+      dockerfile: ./vuetify-project/Dockerfile  # 明确指定 Dockerfile 路径
     ports:
       - "80:80"
     depends_on:
