--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,7 @@ jobs:
           script: |
             cd /www/cicd_wuyu/newTest/FiveEducation
             # 1. 将 DOCKER_USERNAME 写入服务器的 .env 文件
-            echo "DOCKER_USERNAME=$DOCKER_USERNAME" > .env
+            echo "DOCKER_USERNAME=pulihong" > .env
             # 2. 清理旧容器和网络
             docker compose down
             # 3. 拉取最新镜像（如果镜像已推送到 Docker Hub）
@@ -47,5 +47,3 @@ jobs:
             # 5. 启动新容器
             docker compose up -d
             # 传递 DOCKER_USERNAME 环境变量到服务器
-            env:
-              DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
