--- a/vuetify-project/nginx.conf
+++ b/vuetify-project/nginx.conf
@@ -1,15 +1,16 @@
 server {
-    listen 80;
+    listen 9081;
     server_name localhost;
 
     location / {
-        root /usr/share/nginx/html;
-        try_files $uri $uri/ /index.html;
+        proxy_pass http://localhost:9081;  # 前端端口
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 
     # 代理后端API（需与 docker-compose 中的服务名一致）
     location /api {
-        proxy_pass http://backend:9080;
+        proxy_pass http://backend:9181;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
