--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,19 @@
+# /www/cicd_wuyu/project/group1/docker-compose.yml
+version: '3.8'
+
 services:
   backend:
-    image: ${DOCKER_USERNAME}/car-mqtt:latest  # 使用环境变量
-    build:
-      context: .  # 使用相对路径
-      dockerfile: ./car-mqtt/Dockerfile
+    image: ${DOCKER_USERNAME}/car-mqtt:group1  # 镜像标签与分支名绑定
     ports:
-      - "9080:8080"
+      - "9181:8080"  # 宿主机端口:容器端口
     environment:
       - SPRING_PROFILES_ACTIVE=prod
     restart: unless-stopped
 
   frontend:
-    image: ${DOCKER_USERNAME}/vuetify-project:latest
-    build:
-      context: .
-      dockerfile: ./vuetify-project/Dockerfile
+    image: ${DOCKER_USERNAME}/vuetify-project:group1
     ports:
-      - "80:80"
+      - "9081:80"
     depends_on:
       - backend
     restart: unless-stopped
