--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
 services:
   backend:
-    image: ${DOCKER_USERNAME}/car-mqtt:latest  # 使用环境变量
+    image: ${DOCKER_USERNAME}/car-mqtt:latest
     build:
-      context: ./car-mqtt  # 将上下文切换为 car-mqtt 目录
-      dockerfile: Dockerfile  # 直接使用该目录下的 Dockerfile
+      context: ./car-mqtt
+      dockerfile: Dockerfile
     ports:
-      - "9180:8080"
+      - "9180:8080"  # 宿主机 9180 映射到容器 8080（仅用于外部访问）
     environment:
       - SPRING_PROFILES_ACTIVE=prod
     restart: unless-stopped
@@ -13,10 +13,10 @@ services:
   frontend:
     image: ${DOCKER_USERNAME}/vuetify-project:latest
     build:
-      context: .
-      dockerfile: ./vuetify-project/Dockerfile
+      context: ./vuetify-project  # 修正上下文路径
+      dockerfile: Dockerfile
     ports:
-      - "9080:9080"
+      - "9080:9080"  # 宿主机 9080 → 容器 9080
     depends_on:
       - backend
     restart: unless-stopped
