--- a/vuetify-project/nginx.conf
+++ b/vuetify-project/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    listen 9080;
+    listen 9080;  # 容器内监听 9080
     server_name localhost;
 
     location / {
@@ -7,9 +7,9 @@ server {
         try_files $uri $uri/ /index.html;
     }
 
-    # 代理后端API（需与 docker-compose 中的服务名一致）
+    # 代理后端 API（指向后端服务名 + 容器内部端口）
     location /api {
-        proxy_pass http://backend:9180;
+        proxy_pass http://backend:8080;  # 使用容器网络中的服务名和端口
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
